static/css/home.css
/* ... */
.theater-card a:active{

    transform:scale(.96);

}



/* ==========================================
   VIEW MORE
========================================== */

.theater-view-more{

    width:100%;

    text-align:center;

    margin:50px 0;
}

.theater-view-more button{

    width:180px;

    height:50px;

    background:#D4A017;

    color:white;

    border:none;

    border-radius:8px;

    font-size:18px;

    font-weight:bold;

    cursor:pointer;

    transition:.3s;
}

.theater-view-more button:hover{

    background:#E6B325;

    transform:scale(1.05);
}

/* ==========================================
   HIDDEN THEATERS
========================================== */

.hidden-theaters{

    display:none;
}



html{
    scroll-behavior:smooth;
}


/* ===========================
   OVERVIEW
=========================== */

#overview{

    padding:100px 80px;

    background:white;

}

.overview-container{

    max-width:1300px;

    margin:auto;

    display:flex;

    justify-content:space-between;

    align-items:center;

    gap:70px;

}

.overview-text{

    flex:1;

}

.overview-text h2{

    font-size:48px;

    margin-bottom:25px;

    color:#0B4A6F;

}

.overview-text p{

    font-size:18px;

    line-height:1.9;

    color:#555;

    margin-bottom:40px;

}

.info-list{

    display:grid;

    grid-template-columns:repeat(2,1fr);

    gap:20px;

}

.info-item{

    background:#F6F6F6;

    padding:20px;

    border-radius:15px;

    box-shadow:0 5px 15px rgba(0,0,0,.08);

}

.info-item strong{

    display:block;

    margin-bottom:10px;

    color:#0B4A6F;

}

.info-item span{

    color:#555;

}

.overview-image{

    flex:1;

}

.overview-image img{

    width:100%;

    height:500px;

    object-fit:cover;

    border-radius:25px;

    box-shadow:0 12px 30px rgba(0,0,0,.18);

}

